# vizgres

./: .claude.md  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  clippy.toml  docker-compose.test.yml  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml  tag.yml
data/: sql_keywords.txt
docs/: 01-architecture.md  02-ui-layout.md  03-tree-browser.md  04-query-editor.md  05-results-viewer.md  06-command-bar.md  07-keyboard-shortcuts.md  08-connections.md  09-roadmap.md  README.md  design.md
examples/: README.md
examples/config/: config.toml  connections.toml
scripts/: imdb-schema.sql  load-imdb.sh
site/: index.html
src/: app.rs  completer.rs  connection_manager.rs  error.rs  export.rs  history.rs  keymap.rs  lib.rs  main.rs
src/app/: actions.rs  event_handler.rs  mod.rs  sql_utils.rs  tests.rs
src/commands/: handlers.rs  mod.rs  parser.rs
src/config/: connections.rs  mod.rs  saved_queries.rs  settings.rs
src/db/: mod.rs  postgres.rs  provider.rs  schema.rs  sql_limit.rs  types.rs
src/sql/: completer.rs  formatter.rs  mod.rs
src/ui/: cell_popup.rs  command_bar.rs  connection_dialog.rs  editor.rs  explain.rs  help.rs  highlight.rs  inspector.rs  layout.rs  mod.rs  render.rs  results.rs  theme.rs  tree.rs  unicode.rs
tests/: README.md  imdb_acceptance.rs  integration.rs
tests/common/: mod.rs
tests/fixtures/: init.sql
tests/integration/: database_connection.rs  postgres_tests.rs  schema_loading.rs
tests/ui/: snapshots_test.rs
