[package]
name = "vizgres"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["vizgres contributors"]
description = "A fast, keyboard-driven PostgreSQL client for the terminal"
license = "MIT"
repository = "https://github.com/simpllyf/vizgres"
keywords = ["postgresql", "tui", "database", "terminal", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Database
tokio-postgres = "0.7"

# SQL utilities
sqlformat = "0.2"

# Serialization & configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Date/time handling
chrono = "0.4"

[dev-dependencies]
# Testing
testcontainers = "0.21"
insta = "1"
tokio-test = "0.4"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster compile times during development
opt-level = 0

[[bin]]
name = "vizgres"
path = "src/main.rs"
