[package]
name = "vizgres"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["vizgres contributors"]
description = "A fast, keyboard-driven PostgreSQL client for the terminal"
license = "MIT"
repository = "https://github.com/simpllyf/vizgres"
keywords = ["postgresql", "tui", "database", "terminal", "cli"]
categories = ["command-line-utilities", "database"]
readme = "README.md"
exclude = ["tests/", "docs/", ".github/", "docker-compose.test.yml"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
uuid = "1"
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-native-certs = "0.8"
webpki-roots = "0.26"

# Serialization & configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Date/time handling
chrono = "0.4"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Clipboard
arboard = "3"
percent-encoding = "2.3.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "vizgres"
path = "src/main.rs"
